--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -233,7 +233,7 @@ img {
 
 
 <div id="container-fluid" style="text-align:center;"><div class="row"><div class="col-sm-12"><h3>Events This Month</h3></div></div></div>
-<div id="display2" class="container" style="height:50%;background-color:;width:100%;overflow-y:scroll;">
+<div id="display2" class="container" style="height:50%;background-color:;width:100%;overflow-y:scroll;overflow-x:hidden;">
 </div>
 
 
@@ -293,7 +293,7 @@ img {
 <div class="row"><div class="col-sm-12" style="text-align:center;background-color:;"><h3>All Events</h3></div></div>
 </div>
 <br>
-<div id="display" class="container-fluid" style="height:75%;width:100%;background-color:;overflow-y:scroll;">
+<div id="display" class="container-fluid" style="height:75%;width:100%;background-color:;overflow-y:scroll;overflow-x:hidden;">
 </div>
 
 
