--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -219,13 +219,12 @@ background-color:#dddddd !important;
 <div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
 	<div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
-<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;"><h5>Explore</h5></button></div>
+<div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;" onclick="Search()"><h5>Explore</h5></button></div>
 <div class="col-sm-5"><input type="text" class="form-control" id="myInput" placeholder="Search"></div>
 <div class="col-sm-2"><button id="myBtn" style="display:none;" onclick="Search()"></button></div>
 <div class="col-sm-1">
-<form action="/">
-        <button class="btn-default xyz" id="profilebutton"  style="color:#AE0D0D;background-color:white;border:0px; display: none"><h5>Profile</h5></button>
-    </form>
+	<button class="btn-default xyz" id="profileButton" onclick="navigateToProfile()" style="color:#AE0D0D;background-color:green;border:0px; display: none; background: url(/images/profile_img.jpg)"><h5>Profile</h5></button>
+
 	</div>
 <div class="col-sm-1">
     <form action="/login">
@@ -1295,14 +1294,14 @@ $(document).ready(function(){
                     if(data==="anonymousUser"){
                         document.getElementById('logoutbutt').style.display="none";
                         document.getElementById('loginbutt').style.display="block";
-												document.getElementById('profilebutton').style.display="none";
+												document.getElementById('profileButton').style.display="none";
 
 
                     }
                     else{
                         document.getElementById("loginbutt").style.display="none";
                         document.getElementById("logoutbutt").style.display="block";
-												document.getElementById('profilebutton').style.display="block";
+												document.getElementById('profileButton').style.display="block";
 
 
                     }
