--- a/src/main/resources/templates/org_profile.html
+++ b/src/main/resources/templates/org_profile.html
@@ -82,8 +82,7 @@ body, html, .container-fluid {
 <div class="col-sm-1"></div>
 <div class="col-sm-6"></div>
 	<div class="col-sm-1">
-		<button class="btn-default xyz" onclick="gotocreate()" id="createeve" style="color:white;background-color:orange;border:0px;-moz-border-radius: 4px;-webkit-border-radius: 4x;border-radius: 4px;"><h5>Create Event</h5></button>
-
+	<a href="create_event.html">	<button class="btn-default xyz" href="/create_event.html" id="createeve" style="color:white;background-color:orange;border:0px;-moz-border-radius: 4px;-webkit-border-radius: 4x;border-radius: 4px;"><h5>Create Event</h5></button></a>
 	</div>
 	<div class="col-sm-1">
 
@@ -506,12 +505,7 @@ function drawBasic() {
         })
 
 	</script>
-<script>
-	function gotocreate()
-	{
-	    document.location.href="/createEvent";
-	}
-</script>
+
 
 </body>
 </html>
