--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -1285,12 +1285,28 @@ $(document).ready(function(){
 
 <script>
 
+	var user;
+
+    function navigateToProfile() {
+        var navPath ;
+        if (user.userType == "1") {
+            navPath = "/profile_sample";
+        } else if (user.userType == "2") {
+            navPath = "/org_profile";
+        } else {
+            navPath = "/admin_profile"
+        }
+
+        document.location.href = navPath;
+    }
+
     $(document).ready(function () {
         $.ajax({
                 type: "GET",
                 url: '/getauth',
                 success: function (data) {
                     console.log(data);
+                    user=data;
                     if(data==="anonymousUser"){
                         document.getElementById('logoutbutt').style.display="none";
                         document.getElementById('loginbutt').style.display="block";
