--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -165,7 +165,7 @@ img {
 
 
 
-<div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
+<div class="container-fluid" style="background-color:;color:#AE1616;border-bottom:1px solid lightgrey;">
 <div class="row">
     <div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
 <div class="col-sm-1"><button class="btn-default xyz" style="color:#AE0D0D;background-color:white;border:0px;" onclick="Search()"><h5>Explore</h5></button></div>
