--- a/src/main/resources/templates/homepage.html
+++ b/src/main/resources/templates/homepage.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <meta charset="utf-8">
+    <title>Hoosier Events</title>
+
     <meta name="google-signin-client_id" content="758699515124-637q0cgmp8vbs4pdoheg8f09boubprrs.apps.googleusercontent.com">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
