--- a/src/main/resources/templates/PaymentPortal.html
+++ b/src/main/resources/templates/PaymentPortal.html
@@ -4,6 +4,8 @@
 <meta http-equiv="pragma" content="no-cache" />
 <head>
 		<meta charset="UTF-8">
+		    <title>Hoosier Events</title>
+
 		<meta name="viewport" content="width=device-width, initial-scale=1"> 
 		
 <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
