--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,6 +3,8 @@
 	  xmlns="http://www.w3.org/1999/html" xmlns:form="http://www.w3.org/1999/html">
 <head>
   <meta charset="utf-8" />
+    <title>Hoosier Events</title>
+
   <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="google-signin-client_id" content="758699515124-637q0cgmp8vbs4pdoheg8f09boubprrs.apps.googleusercontent.com">
 
