--- a/src/main/resources/templates/profile_sample.html
+++ b/src/main/resources/templates/profile_sample.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns:tiles="http://www.thymeleaf.org"
 	  xmlns="http://www.w3.org/1999/html" xmlns:form="http://www.w3.org/1999/html">
 <head>
-	 <title>Bootstrap Example</title>
+    <title>Hoosier Events</title>
 	 <meta charset="utf-8">
 	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	 <!-- <!  <link rel="stylesheet" href="bootstrap.min.css">  -->
