--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -265,7 +265,7 @@ background-color:#dddddd !important;
 		<div class="row" style="bottom:10%;position:relative">
 			<div class="col-sm-12">
 				<button id="registerbutt" disabled class="btn-block register_button">
-					<h4>Register</h4>
+					<h4>Buy Tickets</h4>
 					<span id="disabledtext" class="tooltiptext" >
 						<h6>Login to Register.</h6>
 					</span>
