--- a/src/main/resources/templates/admin_profile.html
+++ b/src/main/resources/templates/admin_profile.html
@@ -71,7 +71,8 @@ body, html, .container-fluid {
 <!-- NAVIGATION BAR -->
 <div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
-    <div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
+    <!--<div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>-->
+	<div class="col-sm-2"><a href="/" style="text-decoration: none"><image src='/images/newlogo.png' style="width: 150px;height: 50px;" /> </a></div>
 
 <div class="col-sm-1"></div>
 <div class="col-sm-6"></div>
