--- a/src/main/resources/templates/org_profile.html
+++ b/src/main/resources/templates/org_profile.html
@@ -78,8 +78,10 @@ body, html, .container-fluid {
 	
 <div class="container-fluid" style="background-color:;color:#AE1616;padding:10px;border-bottom:1px solid lightgrey;">
 <div class="row">
-	<div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>
-<div class="col-sm-1"></div>
+	<!--<div class="col-sm-2"><a href="/" style="text-decoration: none"><h4 style="color:#AE0D0D;background-color:white;text-align:center">HoosierEvents</h4></a></div>-->
+    <div class="col-sm-2"><a href="/" style="text-decoration: none"><image src='/images/newlogo.png' style="width: 150px;height: 50px;" /> </a></div>
+
+    <div class="col-sm-1"></div>
 <div class="col-sm-6"></div>
 	<div class="col-sm-1">
 	<a href="create_event.html">	<button class="btn-default xyz" href="/create_event.html" id="createeve" style="color:white;background-color:orange;border:0px;-moz-border-radius: 4px;-webkit-border-radius: 4x;border-radius: 4px;"><h5>Create Event</h5></button></a>
