--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -1305,7 +1305,7 @@ $(document).ready(function(){
     $(document).ready(function () {
         $.ajax({
                 type: "GET",
-                url: '/getauth',
+                url: '/getuser',
                 success: function (data) {
                     console.log(data);
                     user=data;
