--- a/src/main/resources/templates/admin_profile.html
+++ b/src/main/resources/templates/admin_profile.html
@@ -659,7 +659,7 @@ function sendMailOrganizer()
 $(document).ready(function () {
         $.ajax({
                 type: "GET",
-                url: '/getauth',
+                url: '/getuser',
                 success: function (data) {
                     console.log(data);
                     if(data==="anonymousUser"){
