--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -472,7 +472,7 @@ background-color:#dddddd !important;
  <div id="chat-page" class="hidden" style="min-width:350px;max-width:350px;min-height:auto;">
 	<div class="chat-container">
 		<div class="chat-header">
-			<table><tr><td align="left" id="organiser_chatname"><h5>Help Desk</h5></td>
+			<table><tr><td align="left" id="organiser_chatname"><h5>Event Chatroom</h5></td>
 						<td align="right" style="padding-left:200px;"><button id="closeButton" class="close">X</button></td></tr></table>
 		</div>
 		<div class="connecting">Connecting...</div>
