--- a/src/main/resources/templates/PaymentPortal.html
+++ b/src/main/resources/templates/PaymentPortal.html
@@ -183,7 +183,7 @@ text-align:center"><h4 style="color:#AE0D0D;">Connect with Us</h4></div></div>
                 url: '/getuser',
                 success: function (data) {
                     console.log(data);
-                    debugger;
+                   /*  debugger; */
                     user = data;
                     if(data===""){
                         document.getElementById('logoutbutt').style.display="none";
