--- a/src/main/resources/templates/admin_profile.html
+++ b/src/main/resources/templates/admin_profile.html
@@ -662,7 +662,7 @@ $(document).ready(function () {
                 url: '/getuser',
                 success: function (data) {
                     console.log(data);
-                    if(data==="anonymousUser"){
+                    if(data===""){
                         document.getElementById('logoutbutt').style.display="none";
                         document.getElementById('loginbutt').style.display="block";
                     }
