--- a/src/main/resources/templates/eventpage.html
+++ b/src/main/resources/templates/eventpage.html
@@ -1341,7 +1341,7 @@ $(document).ready(function(){
                 success: function (data) {
                     console.log(data);
                     user=data;
-                    if(data==="anonymousUser"){
+                    if(data===""){
                         document.getElementById('logoutbutt').style.display="none";
                         document.getElementById('loginbutt').style.display="block";
 												document.getElementById('profileButton').style.display="none";
