--- a/src/main/resources/templates/org_profile.html
+++ b/src/main/resources/templates/org_profile.html
@@ -483,7 +483,7 @@ function drawBasic() {
                     url: '/getuser',
                     success: function (data) {
                         console.log(data);
-                        if(data==="anonymousUser"){
+                        if(data===""){
                             document.getElementById('logoutbutt').style.display="none";
                             document.getElementById('loginbutt').style.display="block";
                             document.getElementById('profileButton').style.display="none";
